--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -13,17 +13,17 @@ env:
 
 jobs:
   build-scan-push:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_}}
+     # - name: Log in to DockerHub
+       # uses: docker/login-action@v3
+       # with:
+        #  username: ${{ secrets.DOCKERHUB_USERNAME }}
+        #  password: ${{ secrets.DOCKERHUB_}}
 
       - name: Build Docker Image
         run: |
@@ -38,8 +38,8 @@ jobs:
           ignore-unfixed: true
           format: 'table'
 
-      - name: Push Docker Image
-        run: |
-          docker tag $IMAGE_NAME_FRONT:$IMAGE_TAG ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME_FRONT:$IMAGE_TAG
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME_FRONT:$IMAGE_TAG
+    #  - name: Push Docker Image
+      #  run: |
+      #    docker tag $IMAGE_NAME_FRONT:$IMAGE_TAG ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME_FRONT:$IMAGE_TAG
+       #   docker push ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME_FRONT:$IMAGE_TAG
 
