--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -1,3 +1,4 @@
+
 name: Docker Build and Secure Push
 
 on:
@@ -27,7 +28,8 @@ jobs:
 
       - name: Build Docker Image
         run: |
-          docker build -t $IMAGE_NAME_FRONT:$IMAGE_TAG -f mern/frontend/Dockerfile
+          pwd
+          docker build -t $IMAGE_NAME_FRONT:$IMAGE_TAG -f ./mern/frontend/Dockerfile
          # docker build -t $IMAGE_NAME_BACK:$IMAGE_TAG .
 
       - name: Scan Image with Trivy
