--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build Docker Image
         run: |
           pwd
-          docker build -t $IMAGE_NAME_FRONT:$IMAGE_TAG -f ./mern/frontend/Dockerfile
+          docker build -t frontend-security . -f mern/frontend/Dockerfile
          # docker build -t $IMAGE_NAME_BACK:$IMAGE_TAG .
 
       - name: Scan Image with Trivy
