--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -26,7 +26,7 @@ jobs:
         #  username: ${{ secrets.DOCKERHUB_USERNAME }}
         #  password: ${{ secrets.DOCKERHUB_}}
 
-      - name: Build Docker Image
+      - name: Build Docker Image.
         run: |
           pwd
           docker build -t frontend-security -f mern/frontend/Dockerfile
