--- a/mern/frontend/Dockerfile
+++ b/mern/frontend/Dockerfile
@@ -7,11 +7,8 @@ FROM node:18.9.1
 # Set the working directory
 WORKDIR /app
 
-# Copy the file from your host to your current location
-COPY mern/frontend/package.json .
-
 # Run the command inside your image filesystem
-RUN npm install
+#RUN npm install
 
 # Inform Docker that the container is listening on the specified port at runtime
 EXPOSE 5173
