--- a/mern/frontend/Dockerfile
+++ b/mern/frontend/Dockerfile
@@ -8,7 +8,7 @@ FROM node:18.9.1
 WORKDIR /app
 
 # Run the command inside your image filesystem
-#RUN npm install
+#RUN npm install.
 
 # Inform Docker that the container is listening on the specified port at runtime
 EXPOSE 5173
