--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -37,11 +37,11 @@ jobs:
         run: |
            trivy image frontend-security:latest
            
-        with:
-          image-ref: $IMAGE_NAME_FRONT:$IMAGE_TAG
-          exit-code: '1'
-          ignore-unfixed: true
-          format: 'table'
+       # with:
+        #  image-ref: $IMAGE_NAME_FRONT:$IMAGE_TAG
+       #  exit-code: '1'
+       #   ignore-unfixed: true
+        #  format: 'table'
 
     #  - name: Push Docker Image
       #  run: |
