--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-     # - name: Log in to DockerHub
-       # uses: docker/login-action@v3
-       # with:
-        #  username: ${{ secrets.DOCKERHUB_USERNAME }}
-        #  password: ${{ secrets.DOCKERHUB_}}
+      - name: Log in to DockerHub
+         uses: docker/login-action@v3
+         with:
+           username: ${{ secrets.DOCKERHUB_USERNAME }}
+           password: ${{ secrets.DOCKERHUB_}}
 
       - name: Build Docker Image.
         run: |
@@ -32,10 +32,10 @@ jobs:
           docker build -t frontend-security . -f mern/frontend/Dockerfile
          # docker build -t $IMAGE_NAME_BACK:$IMAGE_TAG .
 
-      - name: Scan Image with Trivy
+    #  - name: Scan Image with Trivy
         #uses: aquasecurity/trivy-action@master
-        run: |
-          sudo trivy image frontend-security:latest
+      #  run: |
+     #     sudo trivy image frontend-security:latest
            
        # with:
         #  image-ref: $IMAGE_NAME_FRONT:$IMAGE_TAG
@@ -43,8 +43,8 @@ jobs:
        #   ignore-unfixed: true
         #  format: 'table'
 
-    #  - name: Push Docker Image
-      #  run: |
-      #    docker tag $IMAGE_NAME_FRONT:$IMAGE_TAG ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME_FRONT:$IMAGE_TAG
-       #   docker push ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME_FRONT:$IMAGE_TAG
+       - name: Push Docker Image
+         run: |
+          docker tag $IMAGE_NAME_FRONT:$IMAGE_TAG ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME_FRONT:$IMAGE_TAG
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME_FRONT:$IMAGE_TAG
 
